Avoid jumping around wy-nav-content at breakpoint

--- a/sass/_theme_layout.sass
+++ b/sass/_theme_layout.sass
@@ -438,7 +438,6 @@ $padding-b: -1.5
   padding: $gutter $gutter * 2
   height: 100%
   max-width: $wy-nav-content-width
-  margin: auto
 
 .wy-body-mask
   position: fixed
